--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <img src="icons/report-icon.png" alt="Report Icon" style="width: 20px; height: 20px;">
                 Report
             </button>
-            <button onclick="location.href='Presentation.pptx';">
+            <button onclick="window.location.href='https://docs.google.com/presentation/d/14ZfpOKUCGyEQKkULVkyh5d3tOEIx2YUO0H14XwX2-98/edit?usp=sharing';">
                 <img src="icons/presentation-icon.png" alt="Presentation Icon" style="width: 20px; height: 20px;">
                 Presentation
             </button>
