--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 <body>
 
 <div class="navbar">
-    <a href="#home">Home</a>
-    <a href="#description">Description</a>
-    <a href="#project">The Project</a>
-    <a href="#contact">Contact</a>
+    <a href="#home">Αρχική</a>
+    <a href="#description">Περιγραφή</a>
+    <a href="#project">Το Project</a>
+    <a href="#contact">Επικοινωνία</a>
 </div>
 
 <div class="main-content">
@@ -174,7 +174,7 @@
         <h2>Περιγραφή του Project</h2>
         <p>Project για το μάθημα "Autonomous Agents"</p>
         <p>Επιβλέπων καθηγητής: Michail G. Lagoudakis</p>
-        <p>Το θέμα του συγκεκριμένου project είναι η αυτόνομη οδήγηση ενός αυτοκινήτου εντός ενός προσομοιωτή πόλης . Για τις προσομοιώσεις επιλέχθηκε το περιβάλλον του Webot. Ο σκοπός ήταν το αυτοκίνητο να καταφέρει αυτόνομα να κινηθεί μέσα στην πόλη τηρώντας στοιχειώδεις νόμους του ΚΟΚ όπως η διατήρηση της σωστής λωρίδας, το σταμάτημα στα κόκκινα φανάρια και η εκκίνηση στα πράσινα. Επίσης, το αυτοκίνητο δοκιμάστηκε και σε εικονική πόλη που υπήρχαν και άλλα οχήματα με σκοπό ο Controller, που ελέγχει το αυτόνομο όχημα να εξελιχθεί. Έτσι προστέθηκε στην λογική του η ικανότητα να αντιλαμβάνεται και να αποφεύγει-προσπερνά τα υπόλοιπα οχήματα της πόλης.</p>
+        <p>Το θέμα του συγκεκριμένου project είναι η αυτόνομη οδήγηση ενός αυτοκινήτου εντός ενός προσομοιωτή πόλης . Για τις προσομοιώσεις επιλέχθηκε το περιβάλλον του Webot. Ο σκοπός ήταν το αυτοκίνητο να καταφέρει αυτόνομα να κινηθεί μέσα στην πόλη τηρώντας στοιχειώδεις νόμους του ΚΟΚ όπως η διατήρηση της σωστής λωρίδας, το σταμάτημα στα κόκκινα φανάρια και η εκκίνηση στα πράσινα. Επίσης, το αυτοκίνητο δοκιμάστηκε και σε εικονική πόλη όπου υπήρχαν εμπόδια και αναποδογυρισμένα οχήματα, με σκοπό ο Controller, που ελέγχει το αυτόνομο όχημα, να εξελιχθεί. Έτσι, προστέθηκε στη λογική του η ικανότητα να αντιλαμβάνεται και να αποφεύγει ή να προσπερνά τα εμπόδια που μπορεί να υπάρχουν στους δρόμους μιας πόλης.</p>
         <p>Για να επιτευχθεί ο στόχος, χρησιμοποιήθηκαν μέσα, του συγκεκριμένου προσομοιωτή, όπως κάμερες και αισθητήρες απόφασης, και μέσω της λογικής που δόθηκε, ο Controller κατάφερε να ελέγξει αυτόνομα το όχημα μέσα στην εικονική πόλη.</p>
         <p>Εντός της παρακάτω παρουσίασης υπάρχουν βίντεο που απαθανατίζουν το όχημα να κινείται αυτόνομα μέσα στην πόλη και επιβεβαιώνει την σωστή λειτουργία του Controller.</p>
     </div>
@@ -192,11 +192,11 @@
             </button>
             <button onclick="location.href='#';">
                 <img src="icons/report-icon.png" alt="Report Icon" style="width: 20px; height: 20px;">
-                Report
+                Αναφορά
             </button>
             <button onclick="window.location.href='https://docs.google.com/presentation/d/14ZfpOKUCGyEQKkULVkyh5d3tOEIx2YUO0H14XwX2-98/edit?usp=sharing';">
                 <img src="icons/presentation-icon.png" alt="Presentation Icon" style="width: 20px; height: 20px;">
-                Presentation
+                Παρουσίαση
             </button>
         </div>
         <div class="project-image">
@@ -212,7 +212,7 @@
 
 
    <div id="contact" class="section">
-    <h2>Contact</h2>
+    <h2>Επικοινωνία</h2>
     <p>Email: <a href="mailto:kalligiannakiskostis@gmail.com">kalligiannakiskostis@gmail.com</a> ή <a href="mailto:kkalligiannakis@tuc.gr">kkalligiannakis@tuc.gr</a></p>
     <p>Τηλέφωνο: <a href="tel:6943768815">+6943 768 815</a></p>
     <p>Social Media:</p>
