--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <h2>Το Project</h2>
     <div class="project-content">
         <div class="project-links">
-            <button onclick="location.href='#';">
+            <button onclick="window.location.href='https://docs.google.com/document/d/154-W3YsiE0eBMqsmfiOs6nxN36ryQYFjHW9sVe_Th4g/edit?usp=sharing';">
                 <img src="icons/source-code-icon.png" alt="Source Code Icon" style="width: 20px; height: 20px;">
                 Source Code
             </button>
@@ -194,6 +194,7 @@
                 <img src="icons/report-icon.png" alt="Report Icon" style="width: 20px; height: 20px;">
                 Αναφορά
             </button>
+                       
             <button onclick="window.location.href='https://docs.google.com/presentation/d/14ZfpOKUCGyEQKkULVkyh5d3tOEIx2YUO0H14XwX2-98/edit?usp=sharing';">
                 <img src="icons/presentation-icon.png" alt="Presentation Icon" style="width: 20px; height: 20px;">
                 Παρουσίαση
