--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
             <div class="project-links">
 
-            <button onclick="location.href='#';">
+            <button onclick="location.href='https://docs.google.com/document/d/154-W3YsiE0eBMqsmfiOs6nxN36ryQYFjHW9sVe_Th4g/edit?usp=sharing';">
                 <img src="icons/source-code-icon.png" alt="Source Code Icon" style="width: 20px; height: 20px;">
                 <span class="lang lang-en">Source Code</span>
                 <span class="lang lang-gr" style="display:none;">Κώδικας</span>
